# persona-graph

./: .gitignore  CHANGELOG.md  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yml  examples.ipynb  pyproject.toml  todo.md
app/: config.py  db.py  main.py
app/api/: ingest_service.py  rag_service.py  user_service.py
app/graph/: constructor.py  graph_ops.py  neo4j_database.py  rag_interface.py
app/openai/: embeddings.py  llm_graph.py  prompts.py
app/routers/: graph_api.py  user.py
app/utils/: instructions_reader.py  models.py
tests/: conftest.py  test_api.py  test_graph_ops.py  test_rag_interface.py
