[tool.poetry]
name = "innernet-user-memory"
version = "0.1.0"
description = "A digital user memory and identity system for personalization"
authors = ["Utkarsh Saxena"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/innernet-user-memory"
repository = "https://github.com/yourusername/innernet-user-memory"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
neo4j = "^5.20.0"
openai = "^1.30.3"
pydantic-settings = "^2.2.1"
instructor = "^1.3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"